# simple-translator-cli

./: .env.example  .gitignore  Cargo.toml  README.md  source.txt  target.txt
.github/workflows/: build.yml
src/: main.rs
